// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseConfigFile should pass 1`] = `
{
  "dst": {
    "catalog": {},
    "config": {
      "edition_config": {
        "api_key": "***",
        "api_url": "https://prod.api.faros.ai",
        "edition": "cloud",
        "graph": "default",
      },
    },
    "dockerOptions": {
      "maxCpus": 2,
      "maxMemory": 2048,
    },
    "image": "farosai/airbyte-servicenow-destination",
  },
  "src": {
    "catalog": {},
    "config": {
      "password": "***",
      "url": "https://test-instance.service-now.com",
      "username": "test-username",
    },
    "dockerOptions": {
      "maxCpus": 2,
      "maxMemory": 2048,
    },
    "image": "farosai/airbyte-servicenow-source",
  },
}
`;

exports[`processSrcInputFile should succeed writing to an output file 1`] = `
"{"state":{"data":{"format":"base64/gzip","data":"H4sIAAAAAAAAA6uuBQBDv6ajAgAAAA=="}},"type":"STATE","redactedConfig":{"user":"chris"},"sourceType":"example","sourceVersion":"0.12.3"}
{"state":{"data":{"format":"base64/gzip","data":"H4sIAAAAAAAAA6uuBQBDv6ajAgAAAA=="}},"type":"STATE","sourceStatus":{"status":"SUCCESS"}}
{"state":{"data":{"format":"base64/gzip","data":"H4sIAAAAAAAAA6uuBQBDv6ajAgAAAA=="}},"type":"STATE","logs":[{"timestamp":***,"message":{"level":30,"msg":"Source version: 0.12.3"}},{"timestamp":***,"message":{"level":30,"msg":"Config: {\\"user\\":\\"chris\\"}"}},{"timestamp":***,"message":{"level":30,"msg":"Catalog: {}"}},{"timestamp":***,"message":{"level":30,"msg":"State: {}"}},{"timestamp":***,"message":{"level":30,"msg":"Syncing ExampleSource"}},{"timestamp":***,"message":{"level":30,"msg":"Finished syncing ExampleSource"}}]}
"
`;

exports[`write files to temporary dir loadStateFile should pass with existing state file 1`] = `
"{"format":"base64/gzip","data":"dGVzdA=="}
"
`;

exports[`write files to temporary dir writeCatalog should succeed with default only 1`] = `
{
  "streams": [
    {
      "destination_sync_mode": "append",
      "stream": {
        "json_schema": {},
        "name": "builds",
        "supported_sync_modes": [
          "full_refresh",
          "incremental",
        ],
      },
      "sync_mode": "incremental",
    },
  ],
}
`;

exports[`write files to temporary dir writeCatalog should succeed with default only 2`] = `
{
  "streams": [
    {
      "destination_sync_mode": "append",
      "stream": {
        "json_schema": {},
        "name": "testPrefix__builds",
        "supported_sync_modes": [
          "full_refresh",
          "incremental",
        ],
      },
      "sync_mode": "incremental",
    },
  ],
}
`;

exports[`write files to temporary dir writeCatalog should succeed with dst override 1`] = `
{
  "streams": [
    {
      "destination_sync_mode": "append",
      "stream": {
        "json_schema": {},
        "name": "builds",
        "supported_sync_modes": [
          "full_refresh",
          "incremental",
        ],
      },
      "sync_mode": "incremental",
    },
  ],
}
`;

exports[`write files to temporary dir writeCatalog should succeed with dst override 2`] = `
{
  "streams": [
    {
      "destination_sync_mode": "overwrite",
      "stream": {
        "json_schema": {},
        "name": "testPrefix__builds",
        "supported_sync_modes": [
          "full_refresh",
          "incremental",
        ],
      },
      "sync_mode": "full_refresh",
    },
  ],
}
`;

exports[`write files to temporary dir writeCatalog should succeed with src override 1`] = `
{
  "streams": [
    {
      "destination_sync_mode": "overwrite",
      "stream": {
        "json_schema": {},
        "name": "builds",
        "supported_sync_modes": [
          "full_refresh",
          "incremental",
        ],
      },
      "sync_mode": "full_refresh",
    },
  ],
}
`;

exports[`write files to temporary dir writeCatalog should succeed with src override 2`] = `
{
  "streams": [
    {
      "destination_sync_mode": "overwrite",
      "stream": {
        "json_schema": {},
        "name": "testOverridePrefix__builds",
        "supported_sync_modes": [
          "full_refresh",
          "incremental",
        ],
      },
      "sync_mode": "full_refresh",
    },
  ],
}
`;
